@@ -12,6 +12,8 @@
 
 * Artifacts that reference non-default maven repos now analyze properly for user-facing cmd line
 https://github.com/cljdoc/cljdoc-analyzer/issues/78[#78]
+* Omit blank docstrings from analysis
+https://github.com/cljdoc/cljdoc-analyzer/issues/80[#80]
 
 == v1.0.731
 
